--- a/index.html
+++ b/index.html
@@ -2,10 +2,28 @@
 <html lang="en">
     <head>
         <title>map</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
-        <h1> TEST</h1>
+        
+        <!-- <div style="display:none;">
+            <img id="is-destination" src="./icon/is-destination.png">
+            <img id="is-origin" src="./icon/is-origin.png">
+            <img id="wm-alert-icon--police" src="./icon/wm-alert-icon--police.png">
+            <img id="wm-alert-icon--hazard" src="./icon/wm-alert-icon--hazard.png">
 
+            <img id="wm-alert-cluster-icon--road-closed" src="./icon/wm-alert-cluster-icon--road-closed.png">
+            <img id="wm-alert-cluster-icon--hazard" src="./icon/wm-alert-cluster-icon--hazard.png">
+            <img id="wm-alert-cluster-icon--police" src="./icon/wm-alert-cluster-icon--police.png">
+            <img id="wm-user-icon--happy" src="./icon/wm-user-icon--happy.png">
+
+            <img id="wm-user-icon--sunny" src="./icon/wm-user-icon--sunny.png">
+            <img id="wm-user-icon--LOL" src="./icon/wm-user-icon--LOL.png">
+            <img id="wm-user-icon--peaceful" src="./icon/wm-user-icon--peaceful.png">
+            <img id="wm-user-icon--inlove" src="./icon/wm-user-icon--inlove.png">
+
+            <img id="wm-user-icon--zombie" src="./icon/wm-user-icon--zombie.png">
+        </div> -->
         <canvas id="canvas"></canvas>
 
         <script type="module" src="main.js"></script>
