--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     </head>
     <body>
         
-        <!-- <div style="display:none;">
+        <div style="display:none;">
             <img id="is-destination" src="./icon/is-destination.png">
             <img id="is-origin" src="./icon/is-origin.png">
             <img id="wm-alert-icon--police" src="./icon/wm-alert-icon--police.png">
-            <img id="wm-alert-icon--hazard" src="./icon/wm-alert-icon--hazard.png">
+            <img id="wm-alert-icon--hazard-on-road-pot-hole" src="./icon/wm-alert-icon--hazard-on-road-pot-hole.svg">
 
-            <img id="wm-alert-cluster-icon--road-closed" src="./icon/wm-alert-cluster-icon--road-closed.png">
+            <img id="wm-alert-cluster-icon--road-closed" src="./icon/wm-alert-cluster-icon--road-closed.svg">
             <img id="wm-alert-cluster-icon--hazard" src="./icon/wm-alert-cluster-icon--hazard.png">
-            <img id="wm-alert-cluster-icon--police" src="./icon/wm-alert-cluster-icon--police.png">
+            <img id="wm-alert-cluster-icon--police" src="./icon/wm-alert-icon--police.png">
             <img id="wm-user-icon--happy" src="./icon/wm-user-icon--happy.png">
 
             <img id="wm-user-icon--sunny" src="./icon/wm-user-icon--sunny.png">
@@ -23,7 +23,34 @@
             <img id="wm-user-icon--inlove" src="./icon/wm-user-icon--inlove.png">
 
             <img id="wm-user-icon--zombie" src="./icon/wm-user-icon--zombie.png">
-        </div> -->
+            <img id="wm-alert-icon--hazard-on-road-traffic-light-fault" src="./icon/wm-alert-icon--hazard-on-road-traffic-light-fault.svg">
+            <img id="wm-user-icon--ninja" src="./icon/wm-user-icon--ninja.png">
+            <img id="wm-user-icon--cool" src="./icon/wm-user-icon--cool.png">
+
+            <svg id="svg_element" width="100" height="100">
+                <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
+            </svg>
+        </div>
+
+          <img crossorigin="" alt="" role="presentation" src="https://worldtiles1.waze.com/tiles/14/9468/9423.png" class="leaflet-tile leaflet-tile-loaded" style="width: 256px; height: 256px; transform: translate3d(249px, 172px, 0px); opacity: 1;">
+          <img crossorigin="" alt="" role="presentation" src="https://worldtiles1.waze.com/tiles/14/9469/9423.png" class="leaflet-tile leaflet-tile-loaded" style="width: 256px; height: 256px; transform: translate3d(505px, 172px, 0px); opacity: 1;">
+          <img crossorigin="" alt="" role="presentation" src="https://worldtiles1.waze.com/tiles/14/9468/9422.png" class="leaflet-tile leaflet-tile-loaded" style="width: 256px; height: 256px; transform: translate3d(249px, -84px, 0px); opacity: 1;">
+          <img crossorigin="" alt="" role="presentation" src="https://worldtiles1.waze.com/tiles/14/9469/9422.png" class="leaflet-tile leaflet-tile-loaded" style="width: 256px; height: 256px; transform: translate3d(505px, -84px, 0px); opacity: 1;">
+          <img crossorigin="" alt="" role="presentation" src="https://worldtiles1.waze.com/tiles/14/9468/9424.png" class="leaflet-tile leaflet-tile-loaded" style="width: 256px; height: 256px; transform: translate3d(249px, 428px, 0px); opacity: 1;">
+          <img crossorigin="" alt="" role="presentation" src="https://worldtiles1.waze.com/tiles/14/9469/9424.png" class="leaflet-tile leaflet-tile-loaded" style="width: 256px; height: 256px; transform: translate3d(505px, 428px, 0px); opacity: 1;">
+          <img crossorigin="" alt="" role="presentation" src="https://worldtiles1.waze.com/tiles/14/9467/9423.png" class="leaflet-tile leaflet-tile-loaded" style="width: 256px; height: 256px; transform: translate3d(-7px, 172px, 0px); opacity: 1;">
+          <img crossorigin="" alt="" role="presentation" src="https://worldtiles1.waze.com/tiles/14/9470/9423.png" class="leaflet-tile leaflet-tile-loaded" style="width: 256px; height: 256px; transform: translate3d(761px, 172px, 0px); opacity: 1;">
+          <img crossorigin="" alt="" role="presentation" src="https://worldtiles1.waze.com/tiles/14/9467/9422.png" class="leaflet-tile leaflet-tile-loaded" style="width: 256px; height: 256px; transform: translate3d(-7px, -84px, 0px); opacity: 1;">
+          <img crossorigin="" alt="" role="presentation" src="https://worldtiles1.waze.com/tiles/14/9470/9422.png" class="leaflet-tile leaflet-tile-loaded" style="width: 256px; height: 256px; transform: translate3d(761px, -84px, 0px); opacity: 1;">
+          <img crossorigin="" alt="" role="presentation" src="https://worldtiles1.waze.com/tiles/14/9467/9424.png" class="leaflet-tile leaflet-tile-loaded" style="width: 256px; height: 256px; transform: translate3d(-7px, 428px, 0px); opacity: 1;">
+          <img crossorigin="" alt="" role="presentation" src="https://worldtiles1.waze.com/tiles/14/9470/9424.png" class="leaflet-tile leaflet-tile-loaded" style="width: 256px; height: 256px; transform: translate3d(761px, 428px, 0px); opacity: 1;">
+          <img crossorigin="" alt="" role="presentation" src="https://worldtiles1.waze.com/tiles/14/9467/9421.png" class="leaflet-tile leaflet-tile-loaded" style="width: 256px; height: 256px; transform: translate3d(-7px, -340px, 0px); opacity: 1;">
+          <img crossorigin="" alt="" role="presentation" src="https://worldtiles1.waze.com/tiles/14/9468/9421.png" class="leaflet-tile leaflet-tile-loaded" style="width: 256px; height: 256px; transform: translate3d(249px, -340px, 0px); opacity: 1;">
+          <img crossorigin="" alt="" role="presentation" src="https://worldtiles1.waze.com/tiles/14/9466/9422.png" class="leaflet-tile leaflet-tile-loaded" style="width: 256px; height: 256px; transform: translate3d(-263px, -84px, 0px); opacity: 1;">
+          <img crossorigin="" alt="" role="presentation" src="https://worldtiles1.waze.com/tiles/14/9466/9421.png" class="leaflet-tile leaflet-tile-loaded" style="width: 256px; height: 256px; transform: translate3d(-263px, -340px, 0px); opacity: 1;">
+          <img crossorigin="" alt="" role="presentation" src="https://worldtiles1.waze.com/tiles/14/9469/9421.png" class="leaflet-tile leaflet-tile-loaded" style="width: 256px; height: 256px; transform: translate3d(505px, -340px, 0px); opacity: 1;">
+          <img crossorigin="" alt="" role="presentation" src="https://worldtiles1.waze.com/tiles/14/9466/9423.png" class="leaflet-tile leaflet-tile-loaded" style="width: 256px; height: 256px; transform: translate3d(-263px, 172px, 0px); opacity: 1;">'
+
         <canvas id="canvas"></canvas>
 
         <script type="module" src="main.js"></script>
